--- a/cantor-lebesgue.ipynb
+++ b/cantor-lebesgue.ipynb
@@ -8,6 +8,19 @@
     }
    },
    "source": [
+    "<img src=\"https://www.haskell.org/static/img/haskell-logo.svg?etag=ukf3Fg7-\">\n",
+    "\n",
+    "# Yu Gai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# The Cantor-Lebesgue function\n",
     "\n",
     "A continuous mapping from [0, 1] to [0, 1] that is non-differentiable on an uncountable set (the Cantor set).\n",
@@ -22,7 +35,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
