--- a/sierpinski.ipynb
+++ b/sierpinski.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"https://www.haskell.org/static/img/haskell-logo.svg?etag=ukf3Fg7-\">\n",
+    "\n",
+    "# Yu Gai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# The Sierpinski triangle\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/a/ad/Random_Sierpinski_Triangle_animation.gif\" width=\"300\" height=\"300\">\n",
@@ -52,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    ":set -XTypeFamilies -XFlexibleContexts -XNoMonomorphismRestriction"
+    ":set -XTypeFamilies -XFlexibleContexts -XNoMonomorphismRestriction -- GHCi command"
    ]
   },
   {
@@ -118,6 +127,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -127,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -174,6 +210,26 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -182,46 +238,17 @@
     "    replaceOutput output (diagram (sierpinski 3)\n",
     "                            # fc black\n",
     "                            # centerXY\n",
-    "                            # rotateBy (value / 100))"
+    "                            # rotateBy (value / 100))\n",
+    "slider"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "data": {},
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {},
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {},
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {},
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {},
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {},
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {},
      "metadata": {},
@@ -250,12 +277,13 @@
    ],
    "source": [
     "slider <- mkIntSlider\n",
+    "\n",
     "slider"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
